Revamp analysis/refactoring pipeline and Solution
Centralize and simplify analysis/refactoring flow: compute cognitive complexity once per method via CognitiveComplexityVisitor and annotate the AST; preserve full refactored source (with comments/Javadocs) and propagate it through MethodAnalysis and mapping; change analyze/plan APIs to accept precomputed CC and return MethodAnalysis lists from CodeExtractionEngine; add LOC helper and safer AST traversal checks. Minor utility formatting fix. Remove legacy headless/application pipeline and related neo.app/MethodRefactoringPipeline classes to favor the new in-memory extraction/engine approach. Also refactor Solution to support in-memory non-destructive simulations and update related imports and text-edit handling.